--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,8 @@ react {
     //
     //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
     // hermesFlags = ["-O", "-output-source-map"]
-
+// Disable Bridgeless mode
+   // bridgeless = false
     /* Autolinking */
     autolinkLibrariesWithApp()
 }
